exports[`no-assert-throws-call > invalid(1): import assert from 'node:assert';\nassert.throws(new Parser(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(new Parser(input));

`;

exports[`no-assert-throws-call > invalid(1): import assert from 'node:assert';\nassert.throws(new Parser(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(new Parser(input));
    |               ^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => new Parser(input));

`;

exports[`no-assert-throws-call > invalid(10): import assert from 'node:assert';\nassert.throws(object.parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(object.parse(input));

`;

exports[`no-assert-throws-call > invalid(10): import assert from 'node:assert';\nassert.throws(object.parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(object.parse(input));
    |               ^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => object.parse(input));

`;

exports[`no-assert-throws-call > invalid(11): import assert from 'node:assert';\nassert.throws(new Parser(input) as unknown); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(new Parser(input) as unknown);

`;

exports[`no-assert-throws-call > invalid(11): import assert from 'node:assert';\nassert.throws(new Parser(input) as unknown); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(new Parser(input) as unknown);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => new Parser(input) as unknown);

`;

exports[`no-assert-throws-call > invalid(12): import assert from 'node:assert';\nassert.throws(parse(input)!); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input)!);

`;

exports[`no-assert-throws-call > invalid(12): import assert from 'node:assert';\nassert.throws(parse(input)!); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input)!);
    |               ^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input)!);

`;

exports[`no-assert-throws-call > invalid(13): import assert from 'node:assert';\nassert.throws(parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(13): import assert from 'node:assert';\nassert.throws(parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input));
    |               ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(14): import assert from 'node:assert';\nassert.throws(parser.parse(input), SyntaxError); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parser.parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(14): import assert from 'node:assert';\nassert.throws(parser.parse(input), SyntaxError); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parser.parse(input), SyntaxError);
    |               ^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parser.parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(15): import assert from 'node:assert/strict';\nassert.throws(parse(input)); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(15): import assert from 'node:assert/strict';\nassert.throws(parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.throws(parse(input));
    |               ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert/strict';
  2 | assert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(16): import * as assert from 'node:assert';\nassert.throws(parse(input)); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(16): import * as assert from 'node:assert';\nassert.throws(parse(input)); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.throws(parse(input));
    |               ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import * as assert from 'node:assert';
  2 | assert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(17): import assert from 'node:assert';\nassert.strict.throws(parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strict.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(17): import assert from 'node:assert';\nassert.strict.throws(parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strict.throws(parse(input));
    |                      ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.strict.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(18): import {throws} from 'node:assert';\nthrows(parse(input)); 1`] = `

  1 | import {throws} from 'node:assert';
  2 | throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(18): import {throws} from 'node:assert';\nthrows(parse(input)); 2`] = `

Message:
  1 | import {throws} from 'node:assert';
> 2 | throws(parse(input));
    |        ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {throws} from 'node:assert';
  2 | throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(19): import {throws as assertThrows} from 'node:assert';\nassertThrows(parse(input)); 1`] = `

  1 | import {throws as assertThrows} from 'node:assert';
  2 | assertThrows(parse(input));

`;

exports[`no-assert-throws-call > invalid(19): import {throws as assertThrows} from 'node:assert';\nassertThrows(parse(input)); 2`] = `

Message:
  1 | import {throws as assertThrows} from 'node:assert';
> 2 | assertThrows(parse(input));
    |              ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {throws as assertThrows} from 'node:assert';
  2 | assertThrows(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(2): import assert from 'node:assert';\nassert.throws(new Parser(input), SyntaxError); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(new Parser(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(2): import assert from 'node:assert';\nassert.throws(new Parser(input), SyntaxError); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(new Parser(input), SyntaxError);
    |               ^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => new Parser(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(20): import {strict as strictAssert} from 'node:assert';\nstrictAssert.throws(parse(input)); 1`] = `

  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(20): import {strict as strictAssert} from 'node:assert';\nstrictAssert.throws(parse(input)); 2`] = `

Message:
  1 | import {strict as strictAssert} from 'node:assert';
> 2 | strictAssert.throws(parse(input));
    |                     ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(21): import {throws} from 'node:assert/strict';\nthrows(parse(input)); 1`] = `

  1 | import {throws} from 'node:assert/strict';
  2 | throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(21): import {throws} from 'node:assert/strict';\nthrows(parse(input)); 2`] = `

Message:
  1 | import {throws} from 'node:assert/strict';
> 2 | throws(parse(input));
    |        ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {throws} from 'node:assert/strict';
  2 | throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(22): import test from 'node:test';\ntest('t', t => { t.assert.throws(parse(input)); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(parse(input)); });

`;

exports[`no-assert-throws-call > invalid(22): import test from 'node:test';\ntest('t', t => { t.assert.throws(parse(input)); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.throws(parse(input)); });
    |                                  ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(() => parse(input)); });

`;

exports[`no-assert-throws-call > invalid(23): import assert from 'node:assert';\nassert.throws(/* comment */ parse(input), SyntaxError); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(/* comment */ parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(23): import assert from 'node:assert';\nassert.throws(/* comment */ parse(input), SyntaxError); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(/* comment */ parse(input), SyntaxError);
    |                             ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(/* comment */ () => parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(24): import assert from 'node:assert';\nassert.throws((parse(input))); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((parse(input)));

`;

exports[`no-assert-throws-call > invalid(24): import assert from 'node:assert';\nassert.throws((parse(input))); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((parse(input)));
    |                ^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws((() => parse(input)));

`;

exports[`no-assert-throws-call > invalid(25): import assert from 'node:assert';\nassert.throws(parse?.(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse?.(input));

`;

exports[`no-assert-throws-call > invalid(25): import assert from 'node:assert';\nassert.throws(parse?.(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse?.(input));
    |               ^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse?.(input));

`;

exports[`no-assert-throws-call > invalid(26): import assert from 'node:assert';\nassert.throws(parse(input) as never); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input) as never);

`;

exports[`no-assert-throws-call > invalid(26): import assert from 'node:assert';\nassert.throws(parse(input) as never); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input) as never);
    |               ^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input) as never);

`;

exports[`no-assert-throws-call > invalid(27): import assert from 'node:assert';\nassert.throws(parse(input)!); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input)!);

`;

exports[`no-assert-throws-call > invalid(27): import assert from 'node:assert';\nassert.throws(parse(input)!); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input)!);
    |               ^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input)!);

`;

exports[`no-assert-throws-call > invalid(28): import assert from 'node:assert';\nassert.throws(parse(input) satisfies never); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input) satisfies never);

`;

exports[`no-assert-throws-call > invalid(28): import assert from 'node:assert';\nassert.throws(parse(input) satisfies never); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input) satisfies never);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input) satisfies never);

`;

exports[`no-assert-throws-call > invalid(3): import assert from 'node:assert';\nassert.throws(tag\`input\`); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(tag\`input\`);

`;

exports[`no-assert-throws-call > invalid(3): import assert from 'node:assert';\nassert.throws(tag\`input\`); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(tag\`input\`);
    |               ^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => tag\`input\`);

`;

exports[`no-assert-throws-call > invalid(4): import assert from 'node:assert';\nassert.throws(flag ? parse(a) : parse(b)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(flag ? parse(a) : parse(b));

`;

exports[`no-assert-throws-call > invalid(4): import assert from 'node:assert';\nassert.throws(flag ? parse(a) : parse(b)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(flag ? parse(a) : parse(b));
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => flag ? parse(a) : parse(b));

`;

exports[`no-assert-throws-call > invalid(5): import assert from 'node:assert';\nassert.throws(flag && parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(flag && parse(input));

`;

exports[`no-assert-throws-call > invalid(5): import assert from 'node:assert';\nassert.throws(flag && parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(flag && parse(input));
    |               ^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => flag && parse(input));

`;

exports[`no-assert-throws-call > invalid(6): import assert from 'node:assert';\nassert.throws((before(), parse(input))); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((before(), parse(input)));

`;

exports[`no-assert-throws-call > invalid(6): import assert from 'node:assert';\nassert.throws((before(), parse(input))); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((before(), parse(input)));
    |                ^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws((() => before(), parse(input)));

`;

exports[`no-assert-throws-call > invalid(7): import assert from 'node:assert';\nassert.throws(parse(input)()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input)());

`;

exports[`no-assert-throws-call > invalid(7): import assert from 'node:assert';\nassert.throws(parse(input)()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input)());
    |               ^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input)());

`;

exports[`no-assert-throws-call > invalid(8): import assert from 'node:assert';\nasync function run() {\n\tassert.throws(await getCallback());\n} 1`] = `

  1 | import assert from 'node:assert';
  2 | async function run() {
  3 | 	assert.throws(await getCallback());
  4 | }

`;

exports[`no-assert-throws-call > invalid(8): import assert from 'node:assert';\nasync function run() {\n\tassert.throws(await getCallback());\n} 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | async function run() {
> 3 | 	assert.throws(await getCallback());
    | 	              ^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.
  4 | }

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | async function run() {
  3 | 	assert.throws(async () => await getCallback());
  4 | }

`;

exports[`no-assert-throws-call > invalid(9): import assert from 'node:assert';\nfunction* generate() {\n\tassert.throws(yield getCallback());\n} 1`] = `

  1 | import assert from 'node:assert';
  2 | function* generate() {
  3 | 	assert.throws(yield getCallback());
  4 | }

`;

exports[`no-assert-throws-call > invalid(9): import assert from 'node:assert';\nfunction* generate() {\n\tassert.throws(yield getCallback());\n} 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | function* generate() {
> 3 | 	assert.throws(yield getCallback());
    | 	              ^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. The first argument is evaluated before the assertion starts, so what it does escapes it.
  4 | }

`;
